--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6,33 +6,32 @@
     cursor: pointer;
     transform-style: preserve-3d;
     position: relative;
+    height: 400px;
 }
 .card-front{
     position: absolute;
     width: 100%;
     height: 100%;
     background: orangered;
-    transition: transform 1.4s ease-in-out;
+    transition: transform 0.5s ease-in-out;
+    /* transform-origin: right; */
 }
 .card-back{
     position: absolute;
     width: 100%;
     height: 100%;
     background: blue;
-    opacity: 0;
-    transition: opacity 1.4s ease-in-out;
-    transition-delay: .6s;
+    /* opacity: 0; */
+    transition: transform 0.5s ease-in-out;
+    /* transition: opacity 1.4s ease-in; */
+    transform: rotateY(180deg);
+    /* transition-delay: .3s; */
 }
-/* #dutchWord{
-    transition: transform 1.4s ease-in-out;
-    
+#dutchWord, #englishWord{
+    /* top: 50%;
+    transform: translateY(-50%); */
+
 }
-#englishWord{
-    opacity: 0;
-    transition-delay: 5s;
-    transition: opacity 2s ease-in-out;
-    
-} */
 
 footer{
     padding-top: 45px;
